fix: cambiado el subrayado footer

--- a/tienda.html
+++ b/tienda.html
@@ -224,7 +224,7 @@
           <i class="fab fa-instagram"></i>
           <i class="fab fa-tiktok"></i>
         </div>
-        <div class="footer-center">Política de Privacidad | Cookies</div>
+        <div class="footer-center"><u>Política de Privacidad</u> | <u>Cookies</u></div>
         <div class="footer-right">
           Fco. Javier Fdez <i class="fas fa-copyright"></i>
         </div>
